--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
 
     .spacer {
       flex: 1;
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    .relatorio-link {
+      text-decoration: none;
+      font-size: 22px;
+      opacity: 0.5;
+      cursor: pointer;
+      transition: opacity 0.3s;
+    }
+
+    .relatorio-link:hover {
+      opacity: 1;
     }
 
     .container {
@@ -147,37 +161,38 @@
     <div class="title-center">
       <h1>Análise Financeira</h1>
     </div>
-    <div class="spacer"></div>
+    <div class="spacer">
+      <a href="index.relatorios.html" class="relatorio-link" title="Relatório Consolidado">📄</a>
+    </div>
   </header>
 
   <!-- Cards -->
-  <!-- Cards -->
-<div class="container">
-  <a class="card" href="index.resumofinanceiro.html">
-    <div class="icon">📈</div>
-    <h2>Resumo Financeiro</h2>
-  </a>
+  <div class="container">
+    <a class="card" href="index.resumofinanceiro.html">
+      <div class="icon">📈</div>
+      <h2>Resumo Financeiro</h2>
+    </a>
 
-  <a class="card" href="index.cancelamentos.html">
-    <div class="icon">❌</div>
-    <h2>Cancelamentos</h2>
-  </a>
+    <a class="card" href="index.cancelamentos.html">
+      <div class="icon">❌</div>
+      <h2>Cancelamentos</h2>
+    </a>
 
-  <a class="card" href="index.delivery.html">
-    <div class="icon">🚚</div>
-    <h2>Vendas Delivery</h2>
-  </a>
+    <a class="card" href="index.delivery.html">
+      <div class="icon">🚚</div>
+      <h2>Vendas Delivery</h2>
+    </a>
 
-  <a class="card" href="index.meta.html">
-    <div class="icon">📊</div>
-    <h2>Meta de Faturamento</h2>
-  </a>
+    <a class="card" href="index.meta.html">
+      <div class="icon">📊</div>
+      <h2>Meta de Faturamento</h2>
+    </a>
 
-  <a class="card" href="index.conciliacao.html">
-    <div class="icon">💳</div>
-    <h2>Conciliações</h2>
-  </a>
-</div>
+    <a class="card" href="index.conciliacao.html">
+      <div class="icon">💳</div>
+      <h2>Conciliações</h2>
+    </a>
+  </div>
 
   <!-- Script splash -->
   <script>
