--- a/index.relatorios.html
+++ b/index.relatorios.html
@@ -92,7 +92,7 @@
 </head>
 <body>
   <header>
-    <img src="321cb5c5-c200-4a06-b296-14a187d3778b.png" alt="Logo">
+    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo">
     <h1>Relatório Consolidado</h1>
   </header>
 
