--- a/index.relatorios.html
+++ b/index.relatorios.html
@@ -8,14 +8,15 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: white;
+      background-color: #111;
+      color: white;
     }
 
     header {
       text-align: center;
       padding: 20px;
-      border-bottom: 1px solid #ccc;
-      background-color: #f9f9f9;
+      border-bottom: 1px solid #444;
+      background-color: #111;
     }
 
     header img {
@@ -25,17 +26,7 @@
     header h1 {
       margin: 10px 0 0;
       font-size: 26px;
-      color: #2c3e50;
-    }
-
-    .filtros {
-      text-align: center;
-      margin: 30px auto;
-      background: #f0f4f8;
-      padding: 20px;
-      border-radius: 10px;
-      width: fit-content;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+      color: white;
     }
 
     .grid {
@@ -48,8 +39,9 @@
     iframe {
       width: 100%;
       height: 600px;
-      border: 1px solid #ccc;
-      border-radius: 10px;
+      border: none;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
     }
   </style>
 </head>
@@ -59,16 +51,11 @@
     <h1>Relatório Consolidado</h1>
   </header>
 
-  <div class="filtros">
-    <p>As páginas abaixo são exibidas conforme o conteúdo original de cada painel:</p>
-  </div>
-
   <div class="grid">
     <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.resumofinanceiro.html"></iframe>
     <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.delivery.html"></iframe>
     <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.cancelamentos.html"></iframe>
     <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.conciliacao.html"></iframe>
-    <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.meta.html"></iframe>
   </div>
 </body>
 </html>
