--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Cancelamentos - Grupo DV</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -124,15 +124,15 @@
 
 <header>
   <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
-  <h1>📋 Cancelamentos - Grupo DV</h1>
+  <h1>📋 Cancelamentos</h1>
 </header>
 
 <div class="container">
   <div class="filters">
-    <input type="date" id="dataInicio" />
-    <input type="date" id="dataFim" />
+    <input type="date" id="dataInicio">
+    <input type="date" id="dataFim">
     <select id="filtroEmpresa"></select>
-    <input type="text" id="filtroBusca" placeholder="Buscar item..." />
+    <input type="text" id="filtroBusca" placeholder="Buscar item...">
   </div>
 
   <button class="btn-whatsapp" onclick="enviarWhatsapp()">📤 Enviar via WhatsApp</button>
