--- a/index.relatorios.html
+++ b/index.relatorios.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <header>
-    <img src="321cb5c5-c200-4a06-b296-14a187d3778b.png" alt="Logo">
+    <img src="https://grupodvbr.github.io/MENU-LEONARDO/logo.png" alt="Logo">
     <h1>Relatório Consolidado</h1>
   </header>
 
