--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -26,11 +26,9 @@
     }
 
     header h1 {
-      margin: 0 auto;
+      margin: 0;
       font-size: 1.6em;
       font-weight: bold;
-      text-align: center;
-      flex: 1;
     }
 
     .container {
@@ -123,7 +121,7 @@
 <body>
 
 <header>
-  <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
+  <img src="https://drive.google.com/uc?export=view&id=1jyyUNfY1Wy6i1-LArwVOn1ghxCgePQ9K" alt="Logo CB Systems">
   <h1>📋 Cancelamentos</h1>
 </header>
 
