--- a/index.relatorios.html
+++ b/index.relatorios.html
@@ -63,7 +63,80 @@
   </style>
 </head>
 <body>
+  <header><!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Relatório Consolidado</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #111;
+      color: white;
+    }
+
+    header {
+      text-align: center;
+      padding: 20px;
+      border-bottom: 1px solid #444;
+      background-color: #111;
+    }
+
+    header img {
+      height: 60px;
+    }
+
+    header h1 {
+      margin: 10px 0 0;
+      font-size: 26px;
+      color: white;
+    }
+
+    .grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 20px;
+    }
+
+    iframe {
+      width: 400px;
+      height: 600px;
+      border: none;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+      background: white;
+    }
+
+    @media (max-width: 420px) {
+      iframe {
+        width: 100%;
+        height: 500px;
+      }
+    }
+  </style>
+</head>
+<body>
   <header>
+    <img src="https://grupodvbr.github.io/MENU-LEONARDO/logo.png" alt="Logo">
+    <h1>Relatório Consolidado</h1>
+  </header>
+
+  <div class="grid">
+    <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.resumofinanceiro.html"></iframe>
+    <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.delivery.html"></iframe>
+    <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.cancelamentos.html"></iframe>
+    <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.conciliacao.html"></iframe>
+    <!-- Adicione quantos quiser -->
+    <!-- Exemplo: -->
+    <!-- <iframe src="outra-pagina.html"></iframe> -->
+  </div>
+</body>
+</html>
+
     <img src="https://grupodvbr.github.io/MENU-LEONARDO/logo.png" alt="Logo">
     <h1>Relatório Consolidado</h1>
   </header>
